simplified to use method toList instead of collector(Collectors...)